Bug 59230 - [Personas] No image behind toolbars
Summary: [Personas] No image behind toolbars
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Jan Holesovsky
URL:
Whiteboard: BSA target:4.1.0 target:4.0.0.2
Keywords: regression
: 67432 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-11 08:21 UTC by john.pratt
Modified: 2013-11-05 11:03 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot to show what my LOdev looks like (91.87 KB, application/pdf)
2013-01-11 16:53 UTC, john.pratt
Details
No problems with Mac OSX 10.8.2 (208.70 KB, image/png)
2013-01-11 17:15 UTC, Jorendc
Details
Works with Vista (87.89 KB, image/jpeg)
2013-01-11 18:12 UTC, GerardF
Details

Note You need to log in before you can comment on or make changes to this bug.
Description john.pratt 2013-01-11 08:21:35 UTC
Problem description: the persona selected does not display - no error message displayed

Steps to reproduce:
1. tools->options->personalisation
2. choose to 'use own persona'
3. select one and cut and paste the address

Current behavior: box closes but the persona sin't applied (even after close and reopen)

Expected behavior: persona is applied

I use a proxy to access the internet - firefox and internet explorer can both access the internet and libreoffice has the correct settings in the proxy options section.  Is there a way to cut and paste the files into my application data folder to see if it is an internet problem?

              
Operating System: Windows XP
Version: 4.1.0.0.alpha0+ Master
Comment 1 Jorendc 2013-01-11 13:18:15 UTC
I know this was a bug in olders build. I thought Kendy fixed this one a week ago. How old is your build?
Comment 2 john.pratt 2013-01-11 13:54:46 UTC
My build is: Version 4.1.0.0.alpha0+ (Build ID: ff927ba4272aa8f115472577ec9393df19016f2)
TinderBox: Win-x86@6, Branch:master, Time: 2013-01-08_01:14:22
Comment 3 Jorendc 2013-01-11 16:15:46 UTC
I think that's not current enough; In the mean time there Kendy did some more changes, and maybe resolves that your problem (one of the fixes: http://cgit.freedesktop.org/libreoffice/core/commit/?id=0721b5b83e34de1e2fcb320d6a7deae1ad109d61)
Is it possible for you to test with a version of January 10 or even today?

@Kendy: can you have a look at this one?
Comment 4 john.pratt 2013-01-11 16:52:57 UTC
I have updated to this version and it now works, but not as well as on the screenshot on planet.documentfoundation.org

The picture does not go behind my toolbars.

I'm running Windows XP and this version of LODev: Version 4.1.0.0.alpha0+ (Build ID: 3db92283955741b490dc2d4f9e1782b179fee89)
TinderBox: Win-x86@6, Branch:master, Time: 2013-01-11_04:53:05
Comment 5 john.pratt 2013-01-11 16:53:45 UTC
Created attachment 72869 [details]
Screenshot to show what my LOdev looks like
Comment 6 Jorendc 2013-01-11 17:15:02 UTC
Created attachment 72870 [details]
No problems with Mac OSX 10.8.2

Thanks for reporting!

That's indeed not a good behavior. Can't reproduce that on Mac OSX 10.8.2 LibreOffice Versie 4.0.0.1 (Bouw-id: 527dba6f6e0cfbbc71bd6e7b88a52699bb48799)
TinderBox: MacOSX TDF Release, Branch:libreoffice-4-0, Time: 2013-01-09_10:49:53
Comment 7 Jorendc 2013-01-11 17:16:24 UTC
I changed the bug title a bit; hope this is a better description for this bug as it now is.
Comment 8 GerardF 2013-01-11 18:12:32 UTC
Created attachment 72872 [details]
Works with Vista

@ John
Are you using Windows XP ?

Works for me with Win Vista 32bits and 4.0.0.1 RC1.
See attachment.
Comment 9 john.pratt 2013-01-11 19:04:57 UTC
Yes, Windows XP.
Comment 10 Jorendc 2013-01-11 21:39:51 UTC
Can't either reproduce using Windows 7 x64... So I think it's a XP bug only :s.
Versie 4.0.0.1 (Bouw-id: 527dba6f6e0cfbbc71bd6e7b88a52699bb48799)
Comment 11 Jan Holesovsky 2013-01-16 16:56:36 UTC
John: Thanks for the screenshot, it helped to locate the problem.  I'll work on it.
Comment 12 Jan Holesovsky 2013-01-17 16:14:10 UTC
Fixed in master, filed to gerrit for a cherry-pick to 4.0.
Comment 13 Not Assigned 2013-01-17 16:16:15 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aab4b03f605ff4273aa41bbbc6fdbf3ffae8daee

Personas: Fix fdo#59230 - make Personas fully work in non-NWF case too.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Not Assigned 2013-01-17 17:05:03 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4453ea0f988e861217a5cf94445e8ca8a36fa174&h=libreoffice-4-0

Personas: Fix fdo#59230 - make Personas fully work in non-NWF case too.


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Cor Nouws 2013-06-14 08:29:10 UTC
hmm, this is marked as fixed, but for me: no personalisation (410 beta2 on Linux/Ubuntu) ...
(neither with a fresh user profile, nor with an older one)

- I can select one on the website
- copy past in the field, 
- OK
  dialog closes
- ('Select theme' remains active)
- close options dialog
 > nothing changes,
Comment 16 Peter Maunder 2013-06-14 16:18:54 UTC
Duplicate of 63498? Applies to 4.1beta
It appears to be a problem in creating the Personas folder and updating the registrymodifications.xcu Personas entry. 

By manually creating the folder, copying across a valid header image and updating the entry in registrymodifications.xcu the Personas displays as normal.

If I attempt to replace the Personas using the Tools > personalisation menu, the entry is removed from registrymodifications.xcu and the header remains blank.
Comment 17 Cor Nouws 2013-06-14 16:25:47 UTC
(In reply to comment #16)
> Duplicate of 63498? Applies to 4.1beta

Oh sorry, I only searched for issues against 4.1 :)
Comment 18 Peter Maunder 2013-07-27 13:18:13 UTC
I have been trying to summarise my current Personas situation to clarify the situation in my mind. I am documenting it in case it may be of interest to any of you. Does it need to be reported as a bug? Is it just a Linux or en-GB problem? 

I think the Personas is a great idea, my textile artist wife thinks it is very important. Personas Plus on firefox and Thunderbird gives a good spec for the ideal implemantation.

My environment is UBUNTU 12.04 (x2) and LINUX-MINT MATE 13. I am running LibO 3.6.4.3, 4.0.4.2 and now 4.1. LibO 4.0 and 4.1 run from Applications/Office Panels and share the same .config files, LibO 3.6 uses  hand made panel. Only one version is run at a time. All three systems run home made personas on Firefox, Thunderbird and LibO 4.0 and 4.1 

LibreOffice_4.1.0_Linux_x86_deb.tar.gz + en-GB langpack and helppack for installation.

1. LibO 4.0 supported the INSTALLATION and DISPLAY of Personas but no control over the TEXT or ACCENT colours. 

2 LibO 4.1  supports the DISPLAY of Personas, TEXT colours but not the INSTALLATION  of Personas nor ACCENT colours.  (same with RC1, 2 ,3 4)

3. Because the .config files for 4.0 and 4.1 were so different in size, I decided to recreate the files for 4.1 and then manually add the /Gallery/Personas folder and modify registrymodifications.xcu file to restore the settings from 4.0. 

4. I now run 4.0 and 4.1 from the same .config files and use the same personas. 

5. By using a standard name for the personas I wish to use, I no longer need to modify the registrymodifications.xcu file just to change the personas. 

6. I use GIMP to create a new Personas, FIREFOX PERSONAS PLUS to test the new Personas without the need to upload the personas to the firefox website. When happy I copy the new personas and rename it to the LibO Personas folder, restart LibO and I am away. 

7. I can find my way to manage my and my Wife's personas (she is the artist), but the ordinary user will struggle with the current situation. 

Changes to the registrymodifications.xcu file  to manage “OWN THEME”.

before 
oor:name="PersonaSettings" oor:op="fuse"><value></value></prop></item>

after 
oor:op="fuse"><value>Header.jpg;Footer.jpg;#ffffff;#ffffff</value></prop></item>

Where Header.jpg and Footer.jpg are Personas stored in  the 
.config/libreoffice/4/user/gallery/personas folder 

Text Colour (Working) #rrggbb (ffffff = white, #000000 = black) 
Accent colour #ffffff (Not yet implemented) 

Peter
Comment 19 Peter Maunder 2013-07-28 10:53:55 UTC
*** Bug 67432 has been marked as a duplicate of this bug. ***
Comment 20 Cor Nouws 2013-07-28 21:06:17 UTC
(In reply to comment #19)
> *** Bug 67432 has been marked as a duplicate of this bug. ***


I cannot reproduce the crash, nor that the cheges are ingnored.
Only problem: there is quite a huge time lap between hitting OK in the theme selection window, and the moment that one can close the options diaglog.
Maybe that is causing problems?
(Working on Ubuntu with 4.1.0.4 (and others) )
Comment 21 Peter Maunder 2013-08-08 14:43:33 UTC
Re: 59230  63498 66468 67503 67432 
Can't install new Personas.

I think the use of the Firefox personas is a really good "nice to have" feature that impresses new less experienced users. 

There appear to be at least five reported bugs that effect the use of Personas on Linux based (perhaps just UBUNTU based) LibreOffice 4.1.0.4 systems. My Windows XP based LibO works as expected.
The problem is not the display of Personas already defined to the OWN THEME in the registrymodifications.xcu file.  But is the ability to ADD a Personas to the system as I used to be able to do in 4.0. 

Either the new addition is ignored, leaving enough time to complete the transaction or LibO crashes. I do not know whether they are two symptoms of the same problem. I can bypass the problem, but this loses the ability to demonstrate the function. Peter
Comment 22 marinecomm 2013-08-13 21:03:34 UTC
I'm having this problem too. When I try to add the URL of the theme, LibreOffice just up and disappears. No error message or anything. It just crashes. I'm using LibreOffice 4.1.0.4 on Xubuntu 12.04 64-bit. I've had this problem ever since I installed 4.1.0.4. I tried to copy the image files from the .mozilla personas folder but the image files for the current them I'm using aren't there. I've tried reinstalling the theme but for some reason the image files won't show up in the .mozilla personas folder. I have several themes installed and not one of them have imagine files in that folder. Therefore, i don't know any other way of manually adding the theme to LibreOffice. I do not use a proxy to connect to the internet as in the case of the original poster.
Comment 23 Jan Holesovsky 2013-08-15 16:08:02 UTC
Can we please stop reopening this bug, and instead create a new one, when a problem appears?  There is always a different thing to fix, and having one bug that is always reopened with a different problem is annoying ;-)  Thank you!

So the lastest problem seems to be on Ubuntu systems.  Do you mean that it appears in the Ubuntu's LibreOffice build, or when you install the .debs from www.libreoffice.org on an Ubuntu system?

I very much suspect it is the former, and that it has something to do with https handling or so - anyone experiencing the problem, can you please provide me with a strace?

http://en.opensuse.org/openSUSE:Bugreport_LO#How_to_get_strace_log

[it is a SUSE link because I cannot find an up-stream one quickly, but the process is the same].

Thank you!
Comment 24 Peter Maunder 2013-08-22 14:26:33 UTC
My particular problem has been fixed in 4.1.1.1. Thanks

Downloading from the LibO website LibreOffice_4.1.0_Linux_x86_deb.tar.gz + en-GB langpack and helppack. Installed by using sudo dpkg -i *.deb. 
 Ubuntu 12.04 and Linux Mint Mate 13.

Sorry I put the previous entry in this bug rather than creating a new one. Will know better next time.  Peter
Comment 25 sophie 2013-11-05 11:03:18 UTC
I'm closing this bug again as the initial problem is fixed and should not show in MAB anymore. Please open a new bug and provide the strace asked by Kendy if there should be a follow up on another problem. Sophie