Personas: Fix fdo#59230 - make Personas fully work in non-NWF case too.

Change-Id: I19a475f198fcb24c4d66134eb67da719fc99099e